@@ -1,0 +1,348 @@
+# name samequantum
+# arg1 decimal
+# arg2 decimal
+# ret  bool
+
+0      0         1
+0      1         1
+1      0         1
+1      1         1
+
+10     1E+1     0
+10E+1  10E+1    1
+100    10E+1    0
+100    1E+2     0
+0.1    1E-2     0
+0.1    1E-1     1
+0.1    1E-0     0
+999    999      1
+999E-1 99.9     1
+111E-1 22.2     1
+111E-1 1234.2   1
+
+0.0    1.1      1
+0.0    1.11     0
+0.0    0        0
+0.0    0.0      1
+0.0    0.00     0
+0E+1   0E+0     0
+0E+1   0E+1     1
+0E+1   0E+2     0
+0E-17  0E-16    0
+0E-17  0E-17    1
+0E-17  0E-18    0
+0E-17  0.0E-15   0
+0E-17  0.0E-16   1
+0E-17  0.0E-17   0
+-0E-17  0.0E-16   1
+0E-17 -0.0E-17   0
+0E-17 -0.0E-16   1
+-0E-17  0.0E-17   0
+-0E-17 -0.0E-16   1
+-0E-17 -0.0E-17   0
+
+DEC_MAX                  DEC_MAX                    1
+1E-DEC_MIN_EXP           1E-DEC_MIN_EXP             1
+1.00000000E-DEC_MIN_EXP  1.00000000E-DEC_MIN_EXP    1
+DEC_SUBNORMAL_MIN        DEC_SUBNORMAL_MIN          1
+DEC_MAX                  DEC_MAX                    1
+1E-DEC_MIN_EXP           1E-DEC_MIN_EXP             1
+1.00000000E-DEC_MIN_EXP  1.00000000E-DEC_MIN_EXP    1
+DEC_SUBNORMAL_MIN        DEC_SUBNORMAL_MIN          1
+
+-DEC_SUBNORMAL_MIN       -DEC_SUBNORMAL_MIN         1
+-1.00000000E-DEC_MIN_EXP -1.00000000E-DEC_MIN_EXP   1
+-1E-DEC_MIN_EXP          -1E-DEC_MIN_EXP            1
+-DEC_MAX                 -DEC_MAX                   1
+-DEC_SUBNORMAL_MIN       -DEC_SUBNORMAL_MIN         1
+-1.00000000E-DEC_MIN_EXP 1.00000000E-DEC_MIN_EXP    1
+-1E-DEC_MIN_EXP          -1E-DEC_MIN_EXP            1
+-DEC_MAX                 -DEC_MAX                   1
+
+-4.00000000E-DEC_MIN_EXP -1.00004000E-DEC_MIN_EXP   1
+-4E-DEC_MIN_EXP          -1E-DEC_MIN_EXP            1
+-4.00000000E-DEC_MIN_EXP -1.00400000E-DEC_MIN_EXP   1
+-4E-DEC_MIN_EXP          -1E-DEC_MIN_EXP            1
+
+-Inf    -Inf     1
+-Inf     Inf     1
+-Inf     NaN     0
+-Inf    -7E+3    0
+-Inf    -7       0
+-Inf    -7E-3    0
+-Inf    -0E-3    0
+-Inf    -0       0
+-Inf    -0E+3    0
+-Inf     0E-3    0
+-Inf     0       0
+-Inf     0E+3    0
+-Inf     7E-3    0
+-Inf     7       0
+-Inf     7E+3    0
+-Inf     sNaN    0
+
+Inf    -Inf     1
+Inf     Inf     1
+Inf     NaN     0
+Inf    -7E+3    0
+Inf    -7       0
+Inf    -7E-3    0
+Inf    -0E-3    0
+Inf    -0       0
+Inf    -0E+3    0
+Inf     0E-3    0
+Inf     0       0
+Inf     0E+3    0
+Inf     7E-3    0
+Inf     7       0
+Inf     7E+3    0
+Inf     sNaN    0
+
+NaN    -Inf     0
+NaN     Inf     0
+NaN     NaN     1
+NaN    -7E+3    0
+NaN    -7       0
+NaN    -7E-3    0
+NaN    -0E-3    0
+NaN    -0       0
+NaN    -0E+3    0
+NaN     0E-3    0
+NaN     0       0
+NaN     0E+3    0
+NaN     7E-3    0
+NaN     7       0
+NaN     7E+3    0
+NaN     sNaN    1
+
+-7E+3    -Inf     0
+-7E+3     Inf     0
+-7E+3     NaN     0
+-7E+3    -7E+3    1
+-7E+3    -7       0
+-7E+3    -7E-3    0
+-7E+3    -0E-3    0
+-7E+3    -0       0
+-7E+3    -0E+3    1
+-7E+3     0E-3    0
+-7E+3     0       0
+-7E+3     0E+3    1
+-7E+3     7E-3    0
+-7E+3     7       0
+-7E+3     7E+3    1
+-7E+3     sNaN    0
+
+-7      -Inf     0
+-7       Inf     0
+-7       NaN     0
+-7      -7E+3    0
+-7      -7       1
+-7      -7E-3    0
+-7      -0E-3    0
+-7      -0       1
+-7      -0E+3    0
+-7       0E-3    0
+-7       0       1
+-7       0E+3    0
+-7       7E-3    0
+-7       7       1
+-7       7E+3    0
+-7       sNaN    0
+
+-7E-3    -Inf     0
+-7E-3     Inf     0
+-7E-3     NaN     0
+-7E-3    -7E+3    0
+-7E-3    -7       0
+-7E-3    -7E-3    1
+-7E-3    -0E-3    1
+-7E-3    -0       0
+-7E-3    -0E+3    0
+-7E-3     0E-3    1
+-7E-3     0       0
+-7E-3     0E+3    0
+-7E-3     7E-3    1
+-7E-3     7       0
+-7E-3     7E+3    0
+-7E-3     sNaN    0
+
+-0E-3    -Inf     0
+-0E-3     Inf     0
+-0E-3     NaN     0
+-0E-3    -7E+3    0
+-0E-3    -7       0
+-0E-3    -7E-3    1
+-0E-3    -0E-3    1
+-0E-3    -0       0
+-0E-3    -0E+3    0
+-0E-3     0E-3    1
+-0E-3     0       0
+-0E-3     0E+3    0
+-0E-3     7E-3    1
+-0E-3     7       0
+-0E-3     7E+3    0
+-0E-3     sNaN    0
+
+-0      -Inf     0
+-0       Inf     0
+-0       NaN     0
+-0      -7E+3    0
+-0      -7       1
+-0      -7E-3    0
+-0      -0E-3    0
+-0      -0       1
+-0      -0E+3    0
+-0       0E-3    0
+-0       0       1
+-0       0E+3    0
+-0       7E-3    0
+-0       7       1
+-0       7E+3    0
+-0       sNaN    0
+
+-0E+3    -Inf     0
+-0E+3     Inf     0
+-0E+3     NaN     0
+-0E+3    -7E+3    1
+-0E+3    -7       0
+-0E+3    -7E-3    0
+-0E+3    -0E-3    0
+-0E+3    -0       0
+-0E+3    -0E+3    1
+-0E+3     0E-3    0
+-0E+3     0       0
+-0E+3     0E+3    1
+-0E+3     7E-3    0
+-0E+3     7       0
+-0E+3     7E+3    1
+-0E+3     sNaN    0
+
+0E-3    -Inf     0
+0E-3     Inf     0
+0E-3     NaN     0
+0E-3    -7E+3    0
+0E-3    -7       0
+0E-3    -7E-3    1
+0E-3    -0E-3    1
+0E-3    -0       0
+0E-3    -0E+3    0
+0E-3     0E-3    1
+0E-3     0       0
+0E-3     0E+3    0
+0E-3     7E-3    1
+0E-3     7       0
+0E-3     7E+3    0
+0E-3     sNaN    0
+
+0       -Inf     0
+0        Inf     0
+0        NaN     0
+0       -7E+3    0
+0       -7       1
+0       -7E-3    0
+0       -0E-3    0
+0       -0       1
+0       -0E+3    0
+0        0E-3    0
+0        0       1
+0        0E+3    0
+0        7E-3    0
+0        7       1
+0        7E+3    0
+0        sNaN    0
+
+0E+3    -Inf     0
+0E+3     Inf     0
+0E+3     NaN     0
+0E+3    -7E+3    1
+0E+3    -7       0
+0E+3    -7E-3    0
+0E+3    -0E-3    0
+0E+3    -0       0
+0E+3    -0E+3    1
+0E+3     0E-3    0
+0E+3     0       0
+0E+3     0E+3    1
+0E+3     7E-3    0
+0E+3     7       0
+0E+3     7E+3    1
+0E+3     sNaN    0
+
+7E-3    -Inf     0
+7E-3     Inf     0
+7E-3     NaN     0
+7E-3    -7E+3    0
+7E-3    -7       0
+7E-3    -7E-3    1
+7E-3    -0E-3    1
+7E-3    -0       0
+7E-3    -0E+3    0
+7E-3     0E-3    1
+7E-3     0       0
+7E-3     0E+3    0
+7E-3     7E-3    1
+7E-3     7       0
+7E-3     7E+3    0
+7E-3     sNaN    0
+
+7      -Inf     0
+7       Inf     0
+7       NaN     0
+7      -7E+3    0
+7      -7       1
+7      -7E-3    0
+7      -0E-3    0
+7      -0       1
+7      -0E+3    0
+7       0E-3    0
+7       0       1
+7       0E+3    0
+7       7E-3    0
+7       7       1
+7       7E+3    0
+7       sNaN    0
+
+7E+3    -Inf     0
+7E+3     Inf     0
+7E+3     NaN     0
+7E+3    -7E+3    1
+7E+3    -7       0
+7E+3    -7E-3    0
+7E+3    -0E-3    0
+7E+3    -0       0
+7E+3    -0E+3    1
+7E+3     0E-3    0
+7E+3     0       0
+7E+3     0E+3    1
+7E+3     7E-3    0
+7E+3     7       0
+7E+3     7E+3    1
+7E+3     sNaN    0
+
+sNaN    -Inf     0
+sNaN     Inf     0
+sNaN     NaN     1
+sNaN    -7E+3    0
+sNaN    -7       0
+sNaN    -7E-3    0
+sNaN    -0E-3    0
+sNaN    -0       0
+sNaN    -0E+3    0
+sNaN     0E-3    0
+sNaN     0       0
+sNaN     0E+3    0
+sNaN     7E-3    0
+sNaN     7       0
+sNaN     7E+3    0
+sNaN     sNaN    1
+
+sNaN    sNaN     1
+sNaN    sNaN     1
+ NaN     NaN     1
+ NaN     NaN     1
+sNaN     3       0
+ NaN     3       0
+   4    sNaN     0
+   3     NaN     0
+ Inf    sNaN     0
+-Inf     NaN     0
